--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   flutter: ">=2.5.0"
 
 dependencies:
+  dio: ^5.1.1
   flutter:
     sdk: flutter
   plugin_platform_interface: ^2.0.2
