--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   dio: ^5.1.1
   flutter:
     sdk: flutter
+  intl: ^0.18.1
   plugin_platform_interface: ^2.0.2
 
 dev_dependencies:
