--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_in_app_debugger
 description: A new Flutter plugin project.
-version: 0.0.2
+version: 0.0.3
 homepage:
 
 environment:
@@ -11,7 +11,8 @@ dependencies:
   dio: ^5.1.1
   flutter:
     sdk: flutter
-  intl: ^0.18.1
+  intl: ^0.17.0
+  flutter_json_view: ^1.0.0
   plugin_platform_interface: ^2.0.2
 
 dev_dependencies:
