--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_in_app_debugger
 description: A new Flutter plugin project.
 version: 0.0.9
-homepage:
+homepage: 'any thing'
 
 environment:
   sdk: '>=2.15.0 <3.0.0'
@@ -14,6 +14,7 @@ dependencies:
   intl: ^0.17.0
   flutter_json_view: ^1.0.0
   plugin_platform_interface: ^2.0.2
+  flutter_svg: ^1.0.3
 
 dev_dependencies:
   flutter_test:
@@ -47,8 +48,8 @@ flutter:
     # -------------------
 
   # To add assets to your plugin package, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/postman_logo.svg
   #   - images/a_dot_ham.jpeg
   #
   # For details regarding assets in packages, see
