--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_json_view: ^1.0.0
   plugin_platform_interface: ^2.0.2
   flutter_svg: ^1.0.3
+  fluttertoast: ^8.2.1
 
 dev_dependencies:
   flutter_test:
