--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,8 +49,8 @@ flutter:
 
   # To add assets to your plugin package, add an assets section, like this:
   assets:
-    - assets/postman_logo.svg
-    - assets/flutter_logo.svg
+    - assets/icons/
+    - assets/logos/
   #   - images/a_dot_ham.jpeg
   #
   # For details regarding assets in packages, see
